[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_flutter_dig"
version = "0.6.2"
authors = [
    {name = "Gustavo de Oliveira Silva (DIG)"},
]
description = "Automatic tools for flutter tools"
readme = "README.md"
license = {file = "license.txt"}
keywords = ["flutter", "auto flutter"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">= 3.8"
dependencies = [
    "appdirs>=1.4.3",
    "termcolor>=1.1.0",
    "colorama>=0.4.3 ; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://github.com/DIG-/auto-flutter"
Repository = "https://github.com/DIG-/auto-flutter"
Issues = "https://github.com/DIG-/auto-flutter/issues"

[project.scripts]
aflutter = "auto_flutter_dig:main"

[tool.black]
line-length = 120
target-version = ["py311"]