[metadata]
name = auto_flutter
version = 0.1.0

[options]
packages = find:
package_dir =
    =.
python_requires = >=3.7
install_requires =
    appdirs>=1.4.3
    termcolor>=1.1.0
    colorama>=0.4.3 ; platform_system == 'Windows'

[options.packages.find]
where = .
include = auto_flutter*

[options.entry_points]
console_scripts =
    aflutter = auto_flutter:main